change 005 make seo friendly

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="{% static 'assets/img/abdul-profile-2.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/abdul-profile-2.jpg' %}" class="img-fluid" alt="Abdul Samad Farshori">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Python Developer &amp; API Developer.</h3>
@@ -385,40 +385,40 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="{% static 'assets/img/portfolio/portfolio-oak.jpg' %}" class="img-fluid" alt="">
+              <img src="{% static 'assets/img/portfolio/portfolio-oak.jpg' %}" class="img-fluid" alt="web development">
               <div class="portfolio-links">
                 <a href="{% static 'assets/img/portfolio/portfolio-oak.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="oak"><i class="bx bx-plus"></i></a>
-                <a href="https://abdulsamifarshori.pythonanywhere.com/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://abdulsamifarshori.pythonanywhere.com/" title="python developer"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="{% static 'assets/img/portfolio/portfolio-arka.jpg' %}" class="img-fluid" alt="">
+              <img src="{% static 'assets/img/portfolio/portfolio-arka.jpg' %}" class="img-fluid" alt="Web Development, Api Development, AWS">
               <div class="portfolio-links">
                 <a href="{% static 'assets/img/portfolio/portfolio-arka.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="arka"><i class="bx bx-plus"></i></a>
-                <a href="https://arka.algofins.com/admin/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://arka.algofins.com/admin/" title="python developer"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="{% static 'assets/img/portfolio/portfolio-sp.jpg' %}" class="img-fluid" alt="">
+              <img src="{% static 'assets/img/portfolio/portfolio-sp.jpg' %}" class="img-fluid" alt="Web Development, Api Development, AWS">
               <div class="portfolio-links">
                 <a href="{% static 'assets/img/portfolio/portfolio-sp.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="sp-chef"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="#" title="python Developer"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="{% static 'assets/img/portfolio/portfolio-asset.jpg' %}" class="img-fluid" alt="">
+              <img src="{% static 'assets/img/portfolio/portfolio-asset.jpg' %}" class="img-fluid" alt="Web Development, Api Development, AWS">
               <div class="portfolio-links">
                 <a href="{% static 'assets/img/portfolio/portfolio-asset.jpg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="asset-connect"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="#" title="python developer"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
