change 008 add new kwyword

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
 
     gtag('config', 'G-651YJZ9BTM');
   </script>
-  
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Abdul Samad Farshori - Python Developer</title>
   <meta content="Experienced Python developer with expertise in developing web applications, api development, data analysis, and machine learning models. Skilled in various Python frameworks and having knowledge of AWS Lambda and Docker." name="description">
-  <meta content="Python programming, Python Developer, Python, Software development, Web development, Api development, Django Rest Framework, Rest Api, Data analysis, Django, Flask, AWS Lambda, Serverless Application, Microservice, Docker, Github, Problem-solving, Debugging" name="keywords">
+  <meta content="Abdul Samad, Farshori, Python programming, Python Developer, Python, Software development, Web development, Api development, Django Rest Framework, Rest Api, Data analysis, Django, Flask, AWS Lambda, Serverless Application, Microservice, Docker, Github, Problem-solving, Debugging" name="keywords">
   <meta content="Python Developer | Restful API Development | Web Development | AWS" name="title">
   <!-- Favicons -->
   <!-- <link href="{% static 'assets/img/favicon.png' %}" rel="icon"> -->
